<?xml version="1.0"?>
<package format="2">
    <name>mujoco_ros_control</name>
    <version>1.0.0</version>
    <description>
        Package mujoco_ros_control provides interface to between MuJoCo simulator and ros_control.
    </description>
    <maintainer email="vladimir.petrik@aalto.fi">Vladimir Petrik</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>hardware_interface</depend>
    <depend>controller_manager</depend>

</package>
